# activation_Steering

./: .gitignore  BENCHMARKS.md  README.md  docker-compose.yml
backend/: .env.example  .gitignore  Dockerfile  requirements-dev.txt  requirements.txt  steerops_05b_results_v2.json  steerops_7b_base_results.json  steerops_definitive_test.py  steerops_definitive_test_7b_base.py  steerops_sarvam1_results.json  steerops_sarvam2b_test.py
backend/app/: __init__.py  main.py  middleware.py  schemas.py
backend/app/api/: routes.py  websocket.py
backend/app/core/: config.py  constants.py  engine.py  evaluator.py  feature_dataset.py  feature_extractor.py  interpreter.py  loader.py  monitor.py  remote_model.py  resolver.py  scanner.py  vector_calculator.py
backend/app/data/: contrastive_pairs.json
backend/app/patches_examples/: patch_patch.json  patch_rudeness.json
backend/app/storage/: database.py
backend/tests/: steerops_05b_results_v2.json  steerops_7b_base_results.json  steerops_deep_eval.py  steerops_definitive_test.py  steerops_multilingual_result_v2.json  test_hooks.py  test_steerops.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx
frontend/src/components/: ActivationHeatmap.jsx  ChatInterface.jsx  ControlPanel.jsx  DiagnosticsPanel.jsx  ExportModal.jsx  FeatureBrowser.jsx  LoadingBanner.jsx  StatusBar.jsx  Toast.jsx
frontend/src/hooks/: useAnalysis.js  (+1 more)
steerops/: README.md  pyproject.toml
steerops/steerops/: __init__.py  cli.py  hooks.py  patch.py  steerer.py
(+51 files in other folders)
